--- a/.github/workflows/latexCompilation.yml
+++ b/.github/workflows/latexCompilation.yml
@@ -12,7 +12,7 @@ jobs:
       
       
       - name: Set project dir environment var
-        run: echo ::set-env name=PROJECT_DIR::"$GITHUB_WORKSPACE/report/src"
+        run: echo "name=PROJECT_DIR::\"$GITHUB_WORKSPACE/report/src\"" >> $GITHUB_ENV
 
       - name: Prepare report
         uses: xu-cheng/latex-action@master
